src/test/vm/continuation_inherit.php.exp
bool(true)
HipHop Fatal error: Class HerpDerp may not inherit from final class (Continuation) in src/test/vm/continuation_inherit.php on line 4
